# battery_health_inference_RJ

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/Alarm/: alarm.c  alarm.h  bpa.c  bpa.h
main/Config/: configJson.c  configJson.h  devConfig.c  devConfig.h
main/Inc/: battery_data.h  collect_device.h  config.h  devStatus.h  iap.h  led.h  littlefs_ops.h  modbus.h  net_config.h  ota.h  project.h  rs485.h  soc.h  sys.h  sysEvent.h  tflm.h  uniformzation.h
main/ModelVerify/: rskModelVerify.c  rskModelVerify.h  socModelVerify.c  socModelVerify.h
main/Rsk/: rsk.c  rsk.h
main/Soc/: ocv_soc.c  ocv_soc.h  soc_estimate.c  soc_estimate.h
main/Soh/: interSOH.c  interSOH.h
main/Src/: battery_data.c  collect_device.c  config.c  devStatus.c  iap.c  led.c  littlefs_ops.c  modbus.c  net_config.c  ota.c  rs485.c  soc.c  tflm.cpp  uniformization.c
main/event/: sysEvent.c
main/littlefs_image/: NetConfig.json  config.json  socModelTestData.csv
main/model/: P019-24_SOC_0.10_N.c  SOH_5L_0.10_N.c  SOH_5L_0.10_N4.c  activeSohModel.c  soc_model_data.c
main/model/Rsk/: rsk.c  rsk.h
main/model/SOH带实时输入量化模型/滑窗24，推未来一轮/: converted_model.tflite  model_data.c
main/model/SOH带实时输入量化模型/滑窗24，推未来五轮/: converted_model.tflite  (+1 more)
main/model/Soc/: ocv_soc.c  ocv_soc.h  soc.c  soc.h
main/model/Soh/: soh.c  soh.h
main/model/modelData/: RSK_model.c  SOH_5L_0.10_N2.c  SOH_5L_0.10_N3.c  activeRskModel.c  activeSocModel.c  model_data.c  sohModel_24_10L.c  sohModel_24_1L.c  sohModel_24_5L.c
main/tflm/: tflm.cpp
(+9 files in other folders)
